--- a/resources/scss/public/partials/_header.scss
+++ b/resources/scss/public/partials/_header.scss
@@ -6,12 +6,26 @@ header{
     .background-color{
         position:absolute;
         width:100%;
-        height:100%;
+        height:108%;
         background:linear-gradient(150deg, $primary 25%, $secondary 94%);
         z-index:-1;
+        transform:skewY(-9deg);
+        top:-120px;
+
+        /*&::after{
+            position:absolute;
+            width:100%;
+            height:20px;
+            background: -moz-linear-gradient(top,  rgba(255,255,255,0) 0%, rgba(255,255,255,0.04) 4%, rgba(255,255,255,1) 100%);
+            background: -webkit-linear-gradient(top,  rgba(255,255,255,0) 0%,rgba(255,255,255,0.04) 4%,rgba(255,255,255,1) 100%);
+            background: linear-gradient(to bottom,  rgba(255,255,255,0) 0%,rgba(255,255,255,0.04) 4%,rgba(255,255,255,1) 100%);
+            filter: progid:DXImageTransform.Microsoft.gradient( startColorstr='#00ffffff', endColorstr='#ffffff',GradientType=0 );
+            content:' ';
+            bottom:-18px;
+        }*/
     }
 
-    .intro{
+    .title-box{
         position:absolute;
         left:0;
         right:0;
