added span background and git area changes

--- a/resources/scss/public/partials/_default.scss
+++ b/resources/scss/public/partials/_default.scss
@@ -19,3 +19,19 @@ h1, h2, h3, h4, h5, h6{
 
     color:$text-color;
 }
+
+.btn{
+  box-shadow:$standard-shadow;
+  transition: all 0.2s ease-in;
+
+  &:hover {
+    transform: translateY(-1px);
+    box-shadow:$hover-shadow;
+  }
+
+  &:active {
+    transform: translateY(1px);
+    box-shadow:$hover-shadow;
+  }
+
+}
