--- a/resources/scss/public/variables/_colors.scss
+++ b/resources/scss/public/variables/_colors.scss
@@ -5,6 +5,8 @@ $secondary: #2657eb;
 
 //#4568DC
 //#B06AB3
+$g2-primary:#24C6DC;
+$g2-secondary:#514A9D;
 
 $primary-navy: #6B7C93;
 $primary-green: #3ECF8E;
