--- a/resources/scss/public/partials/_github.scss
+++ b/resources/scss/public/partials/_github.scss
@@ -1,17 +1,105 @@
 .github{
     margin-bottom:300px;
+    position:relative;
+
+        .span-background{
+        height:500px;
+        position:absolute;
+        bottom:220px;
+        z-index:-10;
+        width:100%;
+        overflow:hidden;
+        transform:skewY(-9deg);
+        transform-origin:0;
+
+            span{
+                position:absolute;
+                height:33%;
+                width:33%;
+                background:linear-gradient(150deg, #fff 25%, $g2-secondary 94%);
+                opacity:0.5;
+
+                &:nth-child(1){
+                    top:0;
+                    right:-5%;
+                }
+                &:nth-child(2){
+                    top:33%;
+                    right:-15%;
+                    background:linear-gradient(150deg, $g2-secondary 100%, #fff 30%);
+                }
+                &:nth-child(3){
+                    top:33%;
+                    right:18%;
+                }
+                &:nth-child(4){
+                    top:66%;
+                    right:0;
+                    background:linear-gradient(150deg, $g2-secondary 100%, #fff 30%);
+                }
+                &:nth-child(5){
+                    top:66%;
+                    right:33%;
+                }
+            }
+        }
+
     .container-fluid{
         width:105%;
         margin-left:-2.5%;
         padding:0;
+        box-shadow:$standard-shadow;
         .row{
 
             .col-md-6{
-                height:500px;
+                height:550px;
                 transform:skewX(-9deg);
                 transition: all 500ms ease-out;
+                //backface-visibility: hidden;
+
+                .git-container-left{
+                    position:relative;
+                    width:525px;
+                    margin-left:430px;
+                    transform:skewX(9deg);
+                    margin-top:70px;
+
+                    h2{
+                        color:#fff;
+                        margin-bottom:35px;
+                    }
+
+                    p{
+                        color:#fff;
+                        padding-right:200px;
+                    }
+
+                    .badge-intro{
+                        margin-top:80px;
+                    }
+
+                    .tree-badge{
+                        width:50px;
+                        margin-top:10px;
+                        margin-right:10px;
+                    }
+                }
+
+                .git-container-right{
+                    position:relative;
+                    width:525px;
+                    margin-right:400px;
+                    transform:skewX(9deg);
+                    margin-top:70px;
+
+                    h2{
+                        color:#fff;
+                        text-align:right;
+                    }
+                }
             }
             .part-github{
+                position:relative;
                 background-color:#6e5494 ;
                 overflow:hidden;
 
@@ -26,6 +114,65 @@
                     opacity:0.38;
                     transform:skewX(9deg);
                 }
+                    ul{
+                        list-style: none;
+                        width:445px;
+                        position:absolute;
+                        right:0;
+                        text-align:right;
+
+                        a:hover{
+                            border:none;
+                        }
+
+                        li{
+                            position:relative;
+                            width:190px;
+                            height:80px;
+                            background-color:#fff;
+                            margin:5px;
+                            padding:10px 15px 10px 15px;
+                            border-radius:5px;
+                            display:inline-block;
+                            text-align:right;
+                            box-shadow:$standard-shadow;
+                            overflow:hidden;
+                            color:#333;
+
+                            &:before{
+                                content:' ';
+                                width:100px;
+                                height:100px;
+                                position:absolute;
+                                left:-50px;
+                                bottom:-50px;
+                                background:linear-gradient(150deg, $primary 25%, $secondary 94%);
+                                border-radius:50%;
+                                opacity:0.7;
+                            }
+                            
+                            a{
+                                color:#333;
+                                font-size:14px;
+                            }
+
+                            p{
+                                font-size:12px;
+                                color:$text-color;
+                            }
+
+                            .desc{
+                                font-size:12px;
+                                margin:0;
+                            }
+                        }
+
+                            h3{
+                                color:#fff;
+                                font-size:17px;
+                                text-align:right;
+                            }
+                    }
             }
             .part-treehouse{
                 background-color:#5fcf80;
