--- a/resources/scss/public/partials/_header.scss
+++ b/resources/scss/public/partials/_header.scss
@@ -6,11 +6,12 @@ header{
     .background-color{
         position:absolute;
         width:100%;
-        height:108%;
+        height:113%;
         background:linear-gradient(150deg, $primary 25%, $secondary 94%);
         z-index:-1;
         transform:skewY(-9deg);
-        top:-120px;
+        top:-160px;
+        backface-visibility: hidden;
 
         /*&::after{
             position:absolute;
