--- a/resources/scss/public/partials/_header.scss
+++ b/resources/scss/public/partials/_header.scss
@@ -3,12 +3,12 @@ header{
     width:100%;
     height:700px;
 
-    .background-color{
+    .background-color-thing{
         position:absolute;
         width:100%;
         height:113%;
         background:linear-gradient(150deg, $primary 25%, $secondary 94%);
-        z-index:-1;
+        z-index:0;
         transform:skewY(-9deg);
         top:-160px;
         backface-visibility: hidden;
