showcase template in place / reference section layedout

--- a/resources/scss/public/partials/_intro.scss
+++ b/resources/scss/public/partials/_intro.scss
@@ -14,8 +14,19 @@
                 }
 
                 p{
+                    margin-bottom:15px;
+                    a{
+                        color:#6772E5;
 
+                        &:hover{
+
+                            text-decoration: none;
+                            color:#32325d;
+                            border:none;
+                        }
+                    }
                 }
+
             }
         }
     }
