--- a/resources/scss/public/variables/_colors.scss
+++ b/resources/scss/public/variables/_colors.scss
@@ -20,4 +20,4 @@ $gray-font: #95989A;
 $border-color: #F1F7FB;
 
 /* Background colors */
-$graytone-background: #F6F9FC;
+$graytone-background: #edf2f7;
