--- a/resources/scss/public/partials/_github.scss
+++ b/resources/scss/public/partials/_github.scss
@@ -1,11 +1,11 @@
 .github{
-    margin-bottom:300px;
+    margin-bottom:110px;
     position:relative;
 
         .span-background{
         height:500px;
         position:absolute;
-        bottom:270px;
+        bottom:260px;
         z-index:-10;
         width:100%;
         overflow:hidden;
@@ -16,7 +16,7 @@
                 position:absolute;
                 height:33%;
                 width:33%;
-                background:linear-gradient(150deg, #fff 25%, $g2-secondary 94%);
+                background:linear-gradient(150deg, #fafafa 25%, $g2-secondary 94%);
                 opacity:0.5;
 
                 &:nth-child(1){
@@ -26,7 +26,7 @@
                 &:nth-child(2){
                     top:33%;
                     right:-15%;
-                    background:linear-gradient(150deg, $g2-secondary 100%, #fff 30%);
+                    background:linear-gradient(150deg, $g2-secondary 100%, #fafafa 30%);
                 }
                 &:nth-child(3){
                     top:33%;
@@ -35,7 +35,7 @@
                 &:nth-child(4){
                     top:66%;
                     right:0;
-                    background:linear-gradient(150deg, $g2-secondary 100%, #fff 30%);
+                    background:linear-gradient(150deg, $g2-secondary 100%, #fafafa 30%);
                 }
                 &:nth-child(5){
                     top:66%;
