added dot background to reference section

--- a/resources/scss/public/partials/_reference.scss
+++ b/resources/scss/public/partials/_reference.scss
@@ -2,6 +2,9 @@
     background-color:$graytone-background;
     height:520px;
     width:100%;
+    background-image:url('../img/dots.svg');
+    background-repeat:no-repeat;
+    background-position:85%;
 
     .container{
 
