added picture to intro

--- a/resources/scss/public/partials/_intro.scss
+++ b/resources/scss/public/partials/_intro.scss
@@ -27,6 +27,13 @@
                     }
                 }
 
+                img{
+                    position:absolute;
+                    bottom:-720px;
+                    width:154%;
+                    right:-305px;
+                    
+                }
             }
         }
     }
