--- a/resources/scss/public/partials/_github.scss
+++ b/resources/scss/public/partials/_github.scss
@@ -3,7 +3,7 @@
     position:relative;
 
         .span-background{
-        height:500px;
+        height:800px;
         position:absolute;
         bottom:260px;
         z-index:-10;
@@ -40,6 +40,7 @@
                 &:nth-child(5){
                     top:66%;
                     right:33%;
+                    background:linear-gradient(150deg, #fafafa 7%, #514A9D 45%);
                 }
             }
         }
