--- a/resources/scss/public/partials/_github.scss
+++ b/resources/scss/public/partials/_github.scss
@@ -3,10 +3,10 @@
     position:relative;
 
         .span-background{
-        height:800px;
+        height:740px;
         position:absolute;
         bottom:260px;
-        z-index:-10;
+        z-index:1;
         width:100%;
         overflow:hidden;
         transform:skewY(-9deg);
@@ -46,6 +46,8 @@
         }
 
     .container-fluid{
+        position:relative;
+        z-index:20;
         width:105%;
         margin-left:-2.5%;
         padding:0;
