--- a/resources/scss/public/partials/_intro.scss
+++ b/resources/scss/public/partials/_intro.scss
@@ -32,6 +32,7 @@
                     bottom:-720px;
                     width:154%;
                     right:-305px;
+                    z-index:20;
                     
                 }
             }
