--- a/resources/scss/public/partials/_footer.scss
+++ b/resources/scss/public/partials/_footer.scss
@@ -40,7 +40,7 @@ footer{
                         width:80px;
                         height:60px;
                         background-color:#3c89bd;
-                        overflow:hidden;
+                        overflow:hidden;;
 
                         .left-side{
                             background-color:#3498db;
@@ -51,6 +51,7 @@ footer{
                             height:100%;
                             transform:skewX(53deg);
                             z-index:190;
+                            
                         }
 
                         .right-side{
@@ -172,6 +173,15 @@ footer{
                             top:245px;
                             width:200px;
                             background-color:$primary-green;
+                        }
+
+                        p{
+                            padding:0 20px 0 20px;
+                            font-size:12px;
+                            text-align:center;
+                            color:$text-color;
+                            position:absolute;
+                            bottom:25px;
                         }
                     }
 
