--- a/resources/scss/public/partials/_popup.scss
+++ b/resources/scss/public/partials/_popup.scss
@@ -9,7 +9,7 @@
   top: 0;
   width: 100%;
   height: 100%;
-  overflow: auto;
+  overflow: hidden;
   background-color: rgba(0,0,0,0.75);
   .popup-content {
     position:relative;
@@ -22,6 +22,14 @@
     animation-duration: 0.4s;
     background-color:#fff;
     border-radius:5px;
+
+    .close-popup{
+      float:right;
+
+      &:hover{
+        color:lighten(#333, 50%);
+      }
+    }
 
     form{
       input{
