--- a/resources/scss/public/partials/_popup.scss
+++ b/resources/scss/public/partials/_popup.scss
@@ -1,6 +1,9 @@
 .popupActive{
   display:block!important;
 }
+.referenceActive{
+  margin:11% auto!important;
+}
 .popupc{
   display: none;
   position: fixed;
