--- a/views/reference-letter-view.html
+++ b/views/reference-letter-view.html
@@ -1,28 +1,37 @@
-                    <p class="fa fa-quote-left"></p>
-                    <p>It’s my pleasure to write this letter of recommendation for Thomas Messell. Thomas has been
-with us at Ordbogen.com on a digital design/front-end programming internship at Ordbogen
-from January 24th-April 24th 2017.</p>
+<div class="reference-letter-wrapper">
 
-                    <p>Thomas’s tasks were widely varied. He worked on digital design and animation pieces for SoMe,
-designed and coded an internal messaging and task board for the marketing department,
-designed, updated and implemented new pages to our existing careers website and generally
-picked up necessary tasks when needed.</p>
+    <div class="header">
+        <p class="close-popup closePopUp" ng-click="closePopUp($event)">close</p>
+        <img src="assets/img/ordbogen-logo.svg" alt="ordbogen logo">
+    </div>
 
-                    <p>As a person, Thomas is a hard worker. He focuses on the task at hand, and is constantly striving
-to learn more. He certainly has a very keen eye for modern, clean design and is an absolute asset
-in the way that he can design and then implement his design via programming. He has
-demonstrated an easy ability to work with various stakeholders and team members and has
-produced some very unique design pieces for us as a company.</p>
+    <p class="fa fa-quote-left"></p>
+    <p>It’s my pleasure to write this letter of recommendation for Thomas Messell. Thomas has been
+    with us at Ordbogen.com on a digital design/front-end programming internship at Ordbogen
+    from January 24th-April 24th 2017.</p>
 
-                    <p>Without a doubt, I confidently recommend Thomas to join as a junior frontend programmer or
-digital designer on any team. As a dedicated and knowledgeable employee and an all-around
-great person, I know that he will be a beneficial addition to your organization.</p>
+    <p>Thomas’s tasks were widely varied. He worked on digital design and animation pieces for SoMe,
+    designed and coded an internal messaging and task board for the marketing department,
+    designed, updated and implemented new pages to our existing careers website and generally
+    picked up necessary tasks when needed.</p>
 
-                    <p>Please feel free to contact me at +45 39 99 20 36 or at wjo@ordbogen.com should you like to
-discuss Thomas’s qualifications and experience further. I’d be happy to expand on my
-recommendation.</p>
+    <p>As a person, Thomas is a hard worker. He focuses on the task at hand, and is constantly striving
+    to learn more. He certainly has a very keen eye for modern, clean design and is an absolute asset
+    in the way that he can design and then implement his design via programming. He has
+    demonstrated an easy ability to work with various stakeholders and team members and has
+    produced some very unique design pieces for us as a company.</p>
 
-                    <p>Best wishes,</p>
+    <p>Without a doubt, I confidently recommend Thomas to join as a junior frontend programmer or
+    digital designer on any team. As a dedicated and knowledgeable employee and an all-around
+    great person, I know that he will be a beneficial addition to your organization.</p>
 
-                    <p>Whitney Jørgensen</p>
-                    <p>Head of Marketing & Talent</p>
+    <p>Please feel free to contact me at +45 39 99 20 36 or at wjo@ordbogen.com should you like to
+    discuss Thomas’s qualifications and experience further. I’d be happy to expand on my
+    recommendation.</p>
+
+    <p>Best wishes,</p>
+
+    <p><b>Whitney Jørgensen</b><br>
+    <i>Head of Marketing & Talent</i></p>
+
+</div>
