added skills section

--- a/resources/scss/public/partials/_all.scss
+++ b/resources/scss/public/partials/_all.scss
@@ -10,4 +10,6 @@
 @import 'reference';
 @import 'popup';
 @import 'reference-letter';
-
+@import 'skillset';
+@import 'span-background';
+@import 'phone';
