--- a/resources/scss/public/partials/_nav.scss
+++ b/resources/scss/public/partials/_nav.scss
@@ -6,7 +6,7 @@ nav{
         border-radius:50%;
         background-color:#fff;
         position:relative;
-
+        z-index:2;
     }
 
     ul{
@@ -15,6 +15,7 @@ nav{
         padding-top:15px;
         padding-left:0px;
         float:right;
+        z-index:2;
 
          li{
             display:inline-block;
