--- a/resources/scss/public/variables/_colors.scss
+++ b/resources/scss/public/variables/_colors.scss
@@ -6,7 +6,7 @@ $secondary: #2657eb;
 //#4568DC
 //#B06AB3
 $g2-primary:#24C6DC;
-$g2-secondary:#514A9D;
+$g2-secondary:#2657eb;
 
 $primary-navy: #6B7C93;
 $primary-green: #3ECF8E;
@@ -21,3 +21,4 @@ $border-color: #F1F7FB;
 
 /* Background colors */
 $graytone-background: #edf2f7;
+
