--- a/resources/scss/public/variables/_shadows.scss
+++ b/resources/scss/public/variables/_shadows.scss
@@ -1,3 +1,4 @@
 $standard-shadow: 0px 3px 7px 0px rgba(0,0,0,0.16);
 $hover-shadow: 0px 4px 8px 0px rgba(0,0,0,0.20);
 $backend-shadow: 0px 2px 8px 0px rgba(0,0,0,0.08);
+$large-shadow:0px 25px 104px 0px rgba(0,0,0,0.16);
