--- a/resources/scss/public/partials/_header.scss
+++ b/resources/scss/public/partials/_header.scss
@@ -12,18 +12,20 @@ header{
         transform:skewY(-9deg);
         top:-160px;
         backface-visibility: hidden;
+        opacity:0.8;
+        z-index:1;
+    }
 
-        /*&::after{
-            position:absolute;
-            width:100%;
-            height:20px;
-            background: -moz-linear-gradient(top,  rgba(255,255,255,0) 0%, rgba(255,255,255,0.04) 4%, rgba(255,255,255,1) 100%);
-            background: -webkit-linear-gradient(top,  rgba(255,255,255,0) 0%,rgba(255,255,255,0.04) 4%,rgba(255,255,255,1) 100%);
-            background: linear-gradient(to bottom,  rgba(255,255,255,0) 0%,rgba(255,255,255,0.04) 4%,rgba(255,255,255,1) 100%);
-            filter: progid:DXImageTransform.Microsoft.gradient( startColorstr='#00ffffff', endColorstr='#ffffff',GradientType=0 );
-            content:' ';
-            bottom:-18px;
-        }*/
+    .background-image{
+        position:absolute;
+        width:100%;
+        height:113%;
+        background-image:url("../img/header-img.jpg");
+        z-index:0;
+        transform:skewY(-9deg);
+        top:-160px;
+        backface-visibility: hidden;
+        z-index:0;
     }
 
     .title-box{
@@ -31,6 +33,7 @@ header{
         left:0;
         right:0;
         top:130px;
+        z-index:2;
 
         h1{
             text-align:center;
