--- a/resources/scss/public/variables/_colors.scss
+++ b/resources/scss/public/variables/_colors.scss
@@ -7,6 +7,7 @@ $secondary: #2657eb;
 //#B06AB3
 $g2-primary:#24C6DC;
 $g2-secondary:#2657eb;
+$secondary-blue:#54a8e0;
 
 $primary-navy: #6B7C93;
 $primary-green: #3ECF8E;
@@ -21,4 +22,3 @@ $border-color: #F1F7FB;
 
 /* Background colors */
 $graytone-background: #edf2f7;
-
