Learning & Project section

--- a/resources/scss/public/partials/_all.scss
+++ b/resources/scss/public/partials/_all.scss
@@ -2,7 +2,6 @@
 @import 'laptop';
 @import 'header';
 @import 'nav';
-@import 'cube';
 @import 'intro';
 @import 'github';
 @import 'showcase';
@@ -13,3 +12,4 @@
 @import 'skillset';
 @import 'span-background';
 @import 'phone';
+@import 'treehouse';
